# calendar-frontend

./: .env  .gitignore  Cargo.toml  Trunk.toml  config.json  index.html  user_memory_usage_report_admin
assets/: .env  sw.js
src/: app.rs  app_local_storage.rs  config.rs  local_storage.rs  main.rs  reports.rs  requests.rs  state.rs  state_action.rs  utils.rs
src/app/: app.rs  app_ui.rs  mod.rs  utils.rs  view.rs
src/app/ui/: admin_ui.rs  app_ui.rs  manage_access_ui.rs  mod.rs  user_ui.rs  utils.rs
src/db/: aliases.rs  connector.rs  db_connector.rs  mod.rs  request.rs  request_parser.rs  requests_container.rs  state.rs  state_action.rs
src/db/table/: basic.rs  item.rs  lazy_table.rs  mod.rs  requests.rs  table.rs
src/state/: admin_state.rs  custom_requests.rs  db_connector.rs  main_state.rs  mod.rs  request.rs  requests_holder.rs  shared_state.rs  state_requests.rs  state_table.rs  state_table_requests.rs  state_updater.rs  table_requests.rs  table_requests_impl.rs  user_state.rs
src/state/state_v2/: custom_requests.rs  db_connector.rs  main_state.rs  mod.rs  request.rs  requests_holder.rs  state_requests.rs  state_table.rs  table_requests.rs  table_requests_impl.rs
src/state_v1/: main_state.rs  state_requests.rs
src/state_v2/: state_table.rs  table_requests.rs
src/states/: admin_state.rs  mod.rs  state.rs
src/table/: events.rs  utils.rs
src/tables/: access_levels.rs  event_templates.rs  events.rs  mod.rs  permissions.rs  roles.rs  schedules.rs  users.rs  utils.rs
src/ui/: access_level_picker.rs  date_picker.rs  event_card.rs  event_input.rs  event_template_card.rs  event_visibility_picker.rs  layout_info.rs  mod.rs  popup.rs  schedule_card.rs  signal.rs  table_view.rs  time_picker.rs  utils.rs  widget_builder.rs  widget_signal.rs
src/ui/popups/: change_access_levels.rs  event_input.rs  event_template_input.rs  login.rs  mod.rs  new_password_input.rs  permission_input.rs  popup.rs  popup_builder.rs  popup_content.rs  popup_manager.rs  profile.rs  schedule_input.rs  sign_up.rs
src/ui/tables/: event_templates.rs  events.rs  mod.rs  schedules.rs  users.rs
