[package]
name = "calendar-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
calendar-lib = { git = "https://github.com/ArtyomZaycev/calendar-lib.git" }
chrono = { version = "0.4.23", features = ["serde"] }
rand = "0.8.5"
egui = "0.20.0"
eframe = { version = "0.20.0", default-features = false, features = [ "default_fonts",  "glow", "persistence"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.91"
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1.24.1", features = ["full"] }
derive_is_enum_variant = "0.1.1"
bytes = { version = "1.4.0", features = ["serde"] }
encoding_rs = "0.8.32"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
