[package]
name = "calendar-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
calendar-lib = { path = "../lib" }
chrono = { version = "0.4.23", features = ["serde"] }
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
egui = "0.20.0"
eframe = { version = "0.20.0", default-features = false, features = [ "default_fonts",  "glow", "persistence"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.91"
reqwest = { version = "0.11.13", features = ["json"] }
derive_is_enum_variant = "0.1.1"
bytes = { version = "1.4.0", features = ["serde"] }
encoding_rs = "0.8.32"
url = "2.3.1"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.24.1", features = ["full"] }
tracing-subscriber = "0.3"
dotenv = "0.15.0"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3.61"
tracing = "0.1.37"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
